public/style.css
@import url('https://fonts.googleapis.com/css2?family=Nunito+Sans&display=swap');

html {
  width: 100%;
  height: 100%;
  margin: 0;
  padding: 0;
  overflow-x: hidden;
}

body {
  display: flex;
  flex-direction: column;
  margin: 0;
  font-family: 'Nunito Sans';
}

.navbar {
  width: 100%;
  height: 390px;
  background-color: #2F2E41;
  display: flex;
  flex-direction: column;
  margin: 0;
  align-items: center;
  overflow-x: hidden;
}

#cover-image {
  height: 150px;
  width: 200px;
  margin-top: 50px;
  margin-bottom: 20px;
}

.project-name {
  color: #FFFFFF;
  font-size: 36px;
  text-align: center;
}

.main {
  flex-grow: 1;
  background-color:#FFFFFF;
  display: flex;
  flex-direction: column;
  align-items: center;
}

.section {
  /* border: 1px solid red; */
  margin-bottom: 0;
}

.explore-section-header {
  margin: 20px;
  color: #2F2E41;
}

hr {
  width: 90%;
  height: 2px;
  background-color: #D0CDE1;
  margin: 0;
  border: 0;
}

.searchBar {
  display: flex;
  flex-direction: row;
  margin-top: 20px;
  background-color: #D0CDE1;
  border-radius: 15px;
  width: 266px;
  padding: 4px 6px;
  align-items: center;
}

.searcBar__inputSpace {
  background-color: #FFFFFF;
  border-radius: 15px;
  flex-grow: 1;
  padding-left: 6px;
  font-size: 12px;
  height: 20px;
  margin: 0 4px;
  display: flex;
  align-items: flex-end;
}

.searchBar__finderIcon {
  display: flex;
  align-items: center;
}

.devProfilesSection {
  display: grid;
  grid-template-columns: 1fr 1fr;
  align-items: center;
  justify-items: center;
  row-gap: 18px;
  margin: 30px 0;
}

.devProfile {
  /* border: 1px solid yellowgreen; */
  display: flex;
  align-items: center;
  font-size: 12px;
  color: #9F8E63;
}

.devProfile__Image {
  width: 20px;
  margin-right: 5px;
  filter: invert(43%) sepia(14%) saturate(1458%) hue-rotate(223deg) brightness(92%) contrast(82%);
}

.devProfile__link {
  height: 6px;
  margin-left: 4px;
  filter: invert(29%) sepia(94%) saturate(2966%) hue-rotate(208deg) brightness(97%) contrast(104%);
}

.addDevSection {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  margin: 30px 0;
}

.addDevSection__Header {
  margin-bottom: 10px;
  color: #3F3D56;
}

.addDevSection__btn {
  width: 180px;
  height: 30px;
  border-radius: 15px;
  background-color: #7C639F;
  color: #FFFFFF;
  border: 0;
}

.footer {
  font-size: 6px;
  color: #FFFFFF;
  height: 50px;
  display: flex;
  justify-content: center;
  align-items: center;
  background-color: #3F3D56;
}

.footer-heart {
  height: 5px;
  width: 5px;
  filter: invert(100%) sepia(0%) saturate(7423%) hue-rotate(110deg) brightness(117%) contrast(117%);
}

@media screen and (min-width: 600px) {
  .navbar {
    flex-direction: row-reverse;
    justify-content: center;
    height: 600px;
  }

  .project-name {
    font-size: 72px;
    margin: auto 100px;
  }

  #cover-image {
    width: 600px;
    height: 500px;
  }

  .explore-section-header {
    margin: 50px;
    font-size: 56px;
  }

  .searchBar {
    margin-top: 50px;
    width: 700px;
    padding: 10px;
  }

  .searcBar__inputSpace {
    height: 50px;
    padding-left: 24px;
    font-size: 24px;
    color: #D0CDE1;
  }

  .searchBar__finderIcon {
    margin: auto 20px;
  }

  #finderIcon {
    height: 50px;
  }

  .devProfilesSection {
    row-gap: 91px;
    margin: 100px 0;
  }

  .devProfile {
    font-size: 36px;
    font-weight: 400;
  }

  .devProfile__Image {
    width: 100px;
    margin-right: 50px;
    filter: invert(43%) sepia(14%) saturate(1458%) hue-rotate(223deg) brightness(92%) contrast(82%);
  }

  .devProfile__link {
    height: 15px;
    margin-left: 20px;
  }

  .addDevSection {
    margin: 50px 0 30px;
    font-size: 36px;
  }

  .addDevSection__Header {
    margin-bottom: 50px;
  }

  .addDevSection__btn {
    width: auto;
    height: 80px;
    padding: 0 72px;
    font-size: 36px;
  }

  .footer {
    font-size: 24px;
    height: 80px;
  }

  .footer-heart {
    height: 24px;
    width: 24px;
  }
}

